@@ -1,3 +1,11 @@
+2017-03-09  Lukas Kluft  <lukas.kluft@gmail.com>
+
+	* typhon/atmosphere.py (relative_humidty):
+
+	Calculate relative humidity for given VMR, pressure and temperature.
+
+	* doc/typhon.atmosphere.rst: Added `relative_humidity` to docs.
+
 2017-03-08  Gerrit Holl  <g.holl@reading.ac.uk>
 
 	* typhon/datasets/_tovs_defs.py:
